merged local changes and updated appsuite-core version